Initial commit - ABDM Backend

--- a/Asp.netWebAPP/Asp.netWebAPP/Views/Home/Index.cshtml
+++ b/Asp.netWebAPP/Asp.netWebAPP/Views/Home/Index.cshtml
@@ -15,7 +15,9 @@
     <app-root>Loading...</app-root>
 
     <!-- ✅ Angular runtime bundles -->
+    <link rel="stylesheet" href="browser/styles.css">
     <script src="~/browser/polyfills.js" type="module"></script>
     <script src="~/browser/main.js" type="module"></script>
+    <!-- <script src="~/browser/styles.css" type="module"></script>-->
 </body>
 </html>
